AFS_Dev/src/objects/Attribute_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attribute %</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Attribute_TCR__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Attribute TCR</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attribute_Type_Digital_or_Non_digital__c</fullName>
        <label>Attribute Type(Digital or Non-digital)</label>
        <picklist>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Attribute Summary</relationshipLabel>
        <relationshipName>Attribute_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary_Level__c</fullName>
        <label>Summary Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Attribute Summary</label>
    <nameField>
        <label>Attribute Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Summary</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>